# hotshot-events-service

./: Cargo.toml  crates.js  flake.nix  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: build.yml  build_windows.yml  debug_build.yml  lint.yml  update_nix.yml
hotshot_events_service/: all.html  index.html  sidebar-items.js
hotshot_events_service/events/: enum.Error.html  enum.EventError.html  fn.define_api.html  index.html  struct.CustomSnafu.html  struct.EventAvailableSnafu.html  struct.MissingSnafu.html  struct.NotFoundSnafu.html  struct.Options.html  struct.RequestSnafu.html  struct.Snafu.html
hotshot_events_service/events_info/: index.html  sidebar-items.js  struct.EventInfo.html
hotshot_events_service/events_source/: index.html  sidebar-items.js  trait.EventsSource.html
src/: events_source.rs  test.rs
src/hotshot_events_service/: api.rs.html  events.rs.html  events_info.rs.html  events_source.rs.html  lib.rs.html
trait.impl/clap_builder/derive/: trait.Args.js  trait.FromArgMatches.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/snafu/: trait.ErrorCompat.js  trait.IntoError.js
trait.impl/tide_disco/error/: trait.Error.js
(+2 files in other folders)
