[package]
name = "hotshot-events-service"
version = "0.1.49"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.7"
async-lock = "3"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
derivative = "2.2"
derive_more = "0.99"
either = { version = "1.12", features = ["serde"] }
futures = "0.3"
hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.81" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.8"
tagged-base64 = "0.4"
tide-disco = "0.9"
toml = "0.8"
tracing = "0.1"
vbs = "0.1.4"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
    "sync",
] }
tracing-subscriber = "0.3"

[dev-dependencies]
hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.81" }
portpicker = "0.1.1"
surf-disco = "0.9"
